minecraft/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
spec:
  selector:
    matchLabels:
      app: minecraft
  serviceName: "minecraft"
  replicas: 1
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: minecraft
        image: ghcr.io/pmh-only/paper
        command:
          - sh
          - -c
          - java -Xms10240M -Xmx10240M -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+ParallelRefProcEnabled -XX:+PerfDisableSharedMem -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:G1HeapRegionSize=8M -XX:G1HeapWastePercent=5 -XX:G1MaxNewSizePercent=40 -XX:G1MixedGCCountTarget=4 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1NewSizePercent=30 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15 -XX:MaxGCPauseMillis=200 -XX:MaxTenuringThreshold=1 -XX [...]
        tty: true
        stdin: true
        ports:
        - containerPort: 25565
          name: minecraft
        - containerPort: 8100
          name: minecraftmap
        - containerPort: 9100
          name: metrics
        volumeMounts:
        - name: app
          mountPath: /app
  volumeClaimTemplates:
  - metadata:
      name: app
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
