minecraft/creative.yml
apiVersion: v1
kind: Service
metadata:
  name: creative
spec:
  selector:
    app: creative
  type: ClusterIP
  ports:
  - name: creative
    protocol: TCP
    port: 25565
    targetPort: 25565
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: creative
spec:
  selector:
    matchLabels:
      app: creative
  serviceName: "creative"
  replicas: 1
  template:
    metadata:
      labels:
        app: creative
    spec:
      containers:
      - name: creative
        image: ghcr.io/pmh-only/paper:experimental
        tty: true
        stdin: true
        ports:
        - containerPort: 80
          name: creative
        volumeMounts:
        - name: app
          mountPath: /app
  volumeClaimTemplates:
  - metadata:
      name: app
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
