minecraft/lobby.yml
apiVersion: v1
kind: Service
metadata:
  name: lobby
spec:
  selector:
    app: lobby
  type: ClusterIP
  ports:
  - name: lobby
    protocol: TCP
    port: 25565
    targetPort: 25565
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lobby
spec:
  selector:
    matchLabels:
      app: lobby
  serviceName: "lobby"
  replicas: 1
  template:
    metadata:
      labels:
        app: lobby
    spec:
      containers:
      - name: lobby
        image: ghcr.io/pmh-only/paper:experimental
        tty: true
        stdin: true
        ports:
        - containerPort: 80
          name: lobby
        volumeMounts:
        - name: app
          mountPath: /app
  volumeClaimTemplates:
  - metadata:
      name: app
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
