minecraft/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
spec:
  selector:
    app: minecraft
  type: ClusterIP
  ports:
  - name: minecraft
    protocol: TCP
    port: 25565
    targetPort: 25565
  - name: minecraftmap
    protocol: TCP
    port: 8100
    targetPort: 8100
