minecraft/survival.yml
apiVersion: v1
kind: Service
metadata:
  name: survival
spec:
  selector:
    app: survival
  type: ClusterIP
  ports:
  - name: survival
    protocol: TCP
    port: 25565
    targetPort: 25565
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: survival
spec:
  selector:
    matchLabels:
      app: survival
  serviceName: "survival"
  replicas: 1
  template:
    metadata:
      labels:
        app: survival
    spec:
      containers:
      - name: survival
        image: ghcr.io/pmh-only/paper:experimental
        tty: true
        stdin: true
        ports:
        - containerPort: 80
          name: survival
        volumeMounts:
        - name: app
          mountPath: /app
  volumeClaimTemplates:
  - metadata:
      name: app
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
