minecraft/datapacks.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-datapack-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - datapacks.mc.pmh.so
    - datapacks.mc.pmh.codes
    - datapacks.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: "gateway.envoyproxy.io"
          kind: Backend
          name: minecraft-datapack-service
          weight: 1
