minecraft/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: maps.mc.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              number: 8100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcfileserver-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: files.mc.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcfileserver
            port:
              number: 8334
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-old-redirect-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 $scheme://maps.mc.pmh.codes$request_uri;
spec:
  ingressClassName: nginx
  rules:
  - host: maps.pmh.codes
