minecraft/map.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-map-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - mc.pmh.codes
    - maps.pmh.codes
    - map.mc.pmh.codes
    - hawal.pmh.so
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: "gateway.envoyproxy.io"
          kind: Backend
          name: minecraft-map-service
          weight: 1
